Update .gitignore for .gz synctex files

--- a/1155 Lab Template.tex
+++ b/1155 Lab Template.tex
@@ -85,6 +85,7 @@
 				Figure n - Random Sample Plot
 			} \end{small}
 		\end{center}
+				\2 Reference Table as [Table n], reference Figure as [Figure n]
 			\1 Summarize physics concepts under investigation.
 				\2 Cite equations as [1], [2], [3], [4] corresponding to tags in introduction.
 			\1 Discuss relation between data and theory.
