Update Figure example

--- a/LabTemplate.tex
+++ b/LabTemplate.tex
@@ -13,6 +13,7 @@
 \begin{document}
 	\begin{center}
 		% Header Image in ./Images/ folder
+		% Source: extracted from https://web.northeastern.edu/ipl/wp-content/uploads/2017/09/IPL-Sample-Lab-Report.pdf
 		\includegraphics{Header}
 		\vfill		
 		\textbf{\Large{Report for Experiment \#N\\
@@ -80,9 +81,10 @@
 		
 		\begin{center}
 			% Plot Image in ./Image/ folder
-			\includegraphics[width=3in]{RandPlot}\\
+			% Source: made with InkScape
+			\includegraphics[width=4in]{RandFigure}\\
 			\begin{small} \textbf{
-				Figure n - Random Sample Plot
+				Figure n - Random Sample Figure
 			} \end{small}
 		\end{center}
 				\2 Reference Table as [Table n], reference Figure as [Figure n]
