--- a/LabTemplate.tex
+++ b/LabTemplate.tex
@@ -9,6 +9,7 @@
 \usepackage{color} % colored code blocks
 \usepackage{caption} % custom captions
 \usepackage{float} % place figures as float
+
 \graphicspath{{./Images/}} % set path to images
 
 % When writing indented paragraphs:
@@ -93,7 +94,7 @@
 			\caption{Random Figure}
 		\end{figure}
 		\begin{figure}[H]
-			\lstinputlisting[breaklines]{fibonacci.py}
+			\lstinputlisting[breaklines]{./Code/RandCode.py}
 			\centering
 			\caption{Random Code}
 		\end{figure}
