Add sample expression

--- a/LabTemplate.tex
+++ b/LabTemplate.tex
@@ -65,7 +65,13 @@
 		\[ \vec{\nabla} \times \vec{E} = - \frac{\partial \vec{B}}{\partial t} \tag{3} \]
 		\[ \vec{\nabla} \times \vec{B} = \mu_0 \left( \vec{J} + \varepsilon_0 \frac{\partial \vec{E}}{\partial t} \right) \tag{4} \]
 	
-	\section*{Investigation n:}	
+	\section*{Investigation 1:}	
+		Sample expression,
+		\[ z = f(x_1,x_2,...,x_n) 
+		\hspace{1cm} \Rightarrow \hspace{1cm}
+		\delta z = \sqrt{\sum_{i=1}^n \left(
+		\frac{\partial f(x_1,x_2,...,x_n)}{\partial x_i} \delta x_i \right)^2 }\]
+		Sample table,
 		\begin{figure}[H]
 			\centering
 			\begin{tabular}{ccccc}
@@ -85,14 +91,16 @@
 				\(\displaystyle \Delta V = \frac{1}{4 \pi \varepsilon_0} \frac{Q}{r} \)
 			\end{tabular}
 			\caption{Random Table}
-		\end{figure}
+		\end{figure} \noindent
+		Sample figure,
 		\begin{figure}[H]
 			% Plot Image in ./Image/ folder
 			% Source: made with InkScape
 			\centering
 			\includegraphics[width=4in]{RandFigure}\\
 			\caption{Random Figure}
-		\end{figure}
+		\end{figure} \noindent
+		Sample code,
 		\begin{figure}[H]
 			\lstinputlisting[breaklines]{./Code/RandCode.py}
 			\centering
