--- a/LabTemplate.tex
+++ b/LabTemplate.tex
@@ -59,14 +59,14 @@
 	\newpage
 	
 	\section*{Introduction:}
-		Equations:
+		Sample equations,
 		\[ \vec{\nabla} \cdot \vec{E} = \frac{\rho}{\varepsilon_0} \tag{1} \]
 		\[ \vec{\nabla} \cdot \vec{B} = 0 \tag{2} \]
 		\[ \vec{\nabla} \times \vec{E} = - \frac{\partial \vec{B}}{\partial t} \tag{3} \]
 		\[ \vec{\nabla} \times \vec{B} = \mu_0 \left( \vec{J} + \varepsilon_0 \frac{\partial \vec{E}}{\partial t} \right) \tag{4} \]
-	
+		Within report reference as [\textit{Equation n}].
 	\section*{Investigation 1:}	
-		Sample expression,
+		Sample derived equation,
 		\[ z = f(x_1,x_2,...,x_n) 
 		\hspace{1cm} \Rightarrow \hspace{1cm}
 		\delta z = \sqrt{\sum_{i=1}^n \left(
@@ -94,7 +94,7 @@
 		\end{figure} \noindent
 		Sample figure,
 		\begin{figure}[H]
-			% Plot Image in ./Image/ folder
+			% Image in ./Image/ folder
 			% Source: made with InkScape
 			\centering
 			\includegraphics[width=4in]{RandFigure}\\
