--- a/Homework.tex
+++ b/Homework.tex
@@ -53,8 +53,8 @@
 % ------------- %
 % HEADER/FOOTER %
 % ------------- %
-\setlength{\parindent}{0pt}
-\setlength{\headheight}{30pt}
+\setlength\parindent{0pt}
+\setlength\headheight{30pt}
 \headsep=0.25in
 \pagestyle{fancy}
 \lhead{\ifthenelse{\thepage=1}
