Notes relax margins and fix TOC page numbering

--- a/Examples/NotesEx.tex
+++ b/Examples/NotesEx.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=1in,headheight=57pt,headsep=0.1in]{geometry}
 \usepackage{xcolor}
 \usepackage{minted}
 \usepackage{tikz}
@@ -119,9 +119,9 @@
 	\vspace*{\fill}
 	\textsc{\name}
 \end{titlepage}
+\thispagestyle{empty}
 \tableofcontents
 \pagebreak
-\clearpage
 \setcounter{page}{1}
 \pagestyle{fancy}
 
