--- a/Notes/Notes.tex
+++ b/Notes/Notes.tex
@@ -1,4 +1,6 @@
 \documentclass{article}
+\usepackage{standalone}
+\usepackage{import}
 \usepackage[margin=1in,headheight=57pt,headsep=0.1in]{geometry}
 \usepackage{xcolor}
 \usepackage{minted}
@@ -125,5 +127,5 @@
 \setcounter{page}{1}
 \pagestyle{fancy}
 
-:)
+\import{Lecture/}{1}
 \end{document}
